--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,12 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+        <!-- Base application theme. Navigation bar -->
+        <style name="Theme.Fab_Bottom_app_bar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+            <item name="colorPrimary">#0F9D58</item>
+            <item name="colorPrimaryVariant">#0F9D58</item>
+            <item name="colorOnPrimary">#000</item>
+        </style>
+
 </resources>
