--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="blue_floatin">#004788</color>
     <color name="gray">#8F8F8F</color>
     <color name="gray1">#616161</color>
+    <color name="emtyBackground">#00F44336</color>
 </resources>
